--- a/pricebox-loja-app-nuxt/templates/ingress.yaml
+++ b/pricebox-loja-app-nuxt/templates/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     # nginx.ingress.kubernetes.io/proxy-body-size: "25m"
 spec:
   rules:
-  - host: "loja-nuxt.meciasbueno.cloud.okteto.net"
+  - host: "*.loja-nuxt.meciasbueno.cloud.okteto.net"
     http:
       paths:
       - backend:
