--- a/k8s-helm-charts/pricebox-landpage/values.yaml
+++ b/k8s-helm-charts/pricebox-landpage/values.yaml
@@ -12,7 +12,7 @@ image:
 
 imagePullSecrets: []
 nameOverride: "docker-gitlab"
-fullnameOverride: "docker-gitlab"
+fullnameOverride: "pricebox"
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -39,6 +39,7 @@ securityContext: {}
 service:
   type: ClusterIP
   port: 80
+  targetPort: 8000
 
 ingress:
   enabled: true
@@ -47,7 +48,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: localhost
+    - host: estudohelmchart
       paths:
         - path: /
           pathType: ImplementationSpecific
